gcc/testsuite/rust/rustc/ui/parser/issue-62913.rs
"\u\\"
// { dg-error "" "" { target *-*-* } .-1 }
// { dg-error "" "" { target *-*-* } .-2 }
// { dg-error "" "" { target *-*-* } .-3 }

